# job-hunter

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_CONTRACT.md  MIGRATION.md  README.md  SECURITY.md  SETUP.md  pyproject.toml
.claude/tdd/: job-hunter-simplification.tdd.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: development-checks.yml  release.yml  seed-companies.yml
config/: career_pages.yml  companies_browser.yml  job_hunter.yml
config/schemas/: filter.schema.json  job_hunter.schema.json
docs/: agent-mode.md  architecture.md  config.md  linux-packaging.md  llm-api-mode.md  macos-packaging.md  sources.md  startup-discovery-tdd.md  testing.md  windows-packaging.md  workspace-updates.md
docs/benchmarks/: canonical-locations.md  companies.md  package-filters.md
docs/testing/: agent-telemetry.tdd.md  canonical-locations.tdd.md  gui-onboarding-catalogs.tdd.md  package-filters.tdd.md  region-editor.tdd.md  skill-token-audit.tdd.md
examples/: README.md
examples/config/: job_hunter.yml
examples/profile/: career_context.md  resume_double_column.tex  resume_single_column.tex
job_hunter/: __init__.py  briefing.py  constants.py  data_contract.py  diagnostics.py  launcher.py  models.py  shortcut.py  tracker.py  update_safety.py
job_hunter/agent_context/: __init__.py  _types.py  _utils.py  batch.py  briefing.py  candidates.py  evidence_context.py  interview_context.py  lifecycle.py  outreach_context.py  score_context.py  stories.py  tailor_context.py
job_hunter/catalog/: __init__.py  companies.json  experience_levels.json  filters.json  job_titles.json  loader.py  merge.py
job_hunter/cli/: __init__.py  __main__.py  _agent_context.py  _application_commands.py  _dispatch.py  _health_commands.py  _linkedin_commands.py  _run_artifacts.py  _update_safety_commands.py  _workspace.py  app.py  dispatch.py  options.py  output.py
job_hunter/companies/: __init__.py  classification.py  gating.py  seed.py  store.py
job_hunter/config/: __init__.py  countries.json  defaults.py  filter_registry.py  filters.json  loader.py  locations.py  migrations.py  onboarding_bundle.py  paths.py  reference_data.py  removed_keys.py  resume_style.py  resumes.py  runtime.py  schema.py  secrets.py  service.py
job_hunter/core/: __init__.py  api_budget.py  builtin_filters.py  config.py  config_schema.py  experience.py  job_titles.py  language.py  latex_utils.py  llm_utils.py  metrics.py  posting_types.py  url_liveness.py  utils.py
job_hunter/db/: jobs.py
job_hunter/filters/: __init__.py  catalog.py
job_hunter/linkedin/: _config.py  _engagement_support.py  defaults.yml  drafts.py  engagement.py  ideas.py
job_hunter/llm/: __init__.py  client.py  model_catalog.py  providers.py  stage.py  token_usage.py  types.py
job_hunter/locations/: __init__.py
job_hunter/metrics/: collector.py  setup.py  store.py  telemetry.py
job_hunter/pipeline/: _artifacts.py  _match_processor.py  agent_stage.py  browser_hunt.py  context.py  cover_writer.py  enrichment.py  hunt.py  llm_stage.py  orchestrator.py  pdf_compiler.py  pre_llm_gate.py  quality_gate.py  readme_writer.py  resolve_hunt_region.py  runner.py  scorer.py  screening.py  snapshot.py  tailor.py  tailorer.py  validator.py
job_hunter/sources/: _base.py  _dates.py  _http.py  _jd_ats.py  _jd_ats_parsers.py  _policy.py  _scraper.py  adzuna_source.py  ai_web_search.py  arbeitsagentur_source.py  ats_apis.py  ats_slugs.py  ats_urls.py  base.py  careerjet_source.py  glints_source.py  gulftalent_source.py  hh_source.py  himalayas_source.py  jd_fetcher.py  job_boards.py  jobbank_source.py  jobicy_source.py  jobspy_source.py  jobstreet_source.py  jooble_source.py  llm_search.py  mycareersfuture_source.py  orchestrator.py  policy.py  reed_source.py  remoteok_source.py  remotive_source.py  source_config.py  the_muse_source.py  weworkremotely_source.py  workingnomads_source.py
job_hunter/templates/: __init__.py
job_hunter/tools/: compile_profile.py
job_hunter/tracking/: _io.py  applications.py  company_hunts.py  discovery_cache.py  processed_urls.py  repository.py  tracker.py
job_hunter/update/: __init__.py  changelog.py  self_update.py  snapshot.py  upgrader.py  versions.py
job_hunter/ux/: analytics.py  applications.py  briefing.py  dashboard.py  health.py
job_hunter/ux/web/: api.py  (+6 more)
job_hunter/workspace/: __init__.py  _assets.py  _ops.py  assets.py  bridge_migration.py  finalize.py  git_sync.py  init.py  manifest.py  operations.py  safety.py  skills.py  workflows.py
job_hunter/writing/: __init__.py  language.py  rules.py
outputs/state/: discovered_urls.yml
packaging/linux/: install.sh  job-hunter.desktop  job-hunter.spec  job_hunter_entry.py
packaging/macos/: build_pkg.sh  job-hunter.spec  job_hunter_entry.py
packaging/windows/: job-hunter.iss  job-hunter.spec  job_hunter_entry.py
scripts/: benchmark_companies.py  benchmark_filters.py  benchmark_locations.py  benchmark_startup_discovery.py  build_company_seed.py  build_location_data.py  import_startup_companies.py  list_module_imports.py  release_notes.py  seed_companies.py  sync_workspace_template.py  validate_config.py
tests/: conftest.py  test_active_hunt_pipeline.py  test_adapter_contracts.py  test_agent_context.py  test_agent_context_budgets.py  test_ai_web_search.py  test_api_budget.py  test_applications.py  test_arbeitsagentur_source.py  test_ats.py  test_ats_slug_cache.py  test_ats_urls.py  test_bridge_migration.py  test_browser_hunt.py  test_career_pages.py  test_catalog.py  test_cli.py  test_company_gating.py  test_company_hunts.py  test_company_research.py  test_company_seed_data.py  test_company_store.py  test_compile_profile.py  test_config.py  test_config_resumes.py  test_config_service.py  test_config_yaml.py  test_core_utils.py  test_cover_writer.py  test_dashboard_analytics.py  test_dashboard_assembly.py  test_dashboard_perf.py  test_dependency_boundaries.py  test_diagnostics.py  test_dispatch.py  test_enrichment.py  test_experience.py  test_filter_migration.py  test_filter_registry.py  test_find_jobs_e2e.py  (+91 more)
(+501 files in other folders)
