[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter-kit"
version = "0.14"
description = "Job search automation with LLM API pipeline mode and AI agent mode."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Abdul Basit"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
]
requires-python = ">=3.12,<3.14"
dependencies = [
  "typer>=0.12",
  "anthropic>=0.50.0",
  "openai>=1.68.0",
  "google-genai>=1.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "pyyaml>=6.0",
  "python-jobspy>=0.20.0",
  "jsonschema>=4.0",
  "headroom-ai>=0.1.0; sys_platform != 'win32'",
  "pywebview>=4.4",
  "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-cov", "ty>=0.0.1a20"]
secrets = ["keyring>=24.0.0"]
all = ["job-hunter-kit[browser,secrets]"]

[project.scripts]
job-hunter = "job_hunter.cli:app"

[project.urls]
Homepage = "https://github.com/abdulrbasit/job-hunter"
Repository = "https://github.com/abdulrbasit/job-hunter"
Issues = "https://github.com/abdulrbasit/job-hunter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["job_hunter", "job_hunter.*"]

[tool.setuptools.package-data]
"job_hunter.templates" = [
  "workspace/SETUP.md",
  "workspace/AGENTS.md",
  "workspace/CLAUDE.md",
  "workspace/README.md",
  "workspace/COMMANDS.md",
  "workspace/.env.example",
  "workspace/.gitignore",
  "workspace/config/**/*",
  "workspace/outputs/**/*",
  "workspace/.github/**/*",
  "workspace/profile/**/*",
  "workspace/.claude/skills/job-hunter/**/*",
  "workspace/.claude/skills/linkedin/**/*",
  "workspace/.claude/skills/setup/**/*",
]
"job_hunter.linkedin" = ["defaults.yml"]
"job_hunter.ux.webdash" = ["*.html"]

[tool.uv]
override-dependencies = [
  "markdownify>=0.14.1",
  "python-jobspy>=1.1.82",
  "pandas>=2.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["job_hunter"]
omit = [
  "job_hunter/cli/*",
  "job_hunter/sources/career_pages/_rendering.py",
]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["notebooks", "**/generated/**"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "TID251", "W", "S", "C901"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S603", "S607"]
"job_hunter/cli/__init__.py" = ["B008", "S603", "S607"]
"job_hunter/agent_context/{batch,candidates,lifecycle}.py" = ["C901"]
"job_hunter/core/llm_utils.py" = ["C901"]
"job_hunter/pipeline/{enrichment,orchestrator,validator}.py" = ["C901"]
"job_hunter/sources/*_source.py" = ["C901"]
"job_hunter/sources/{job_boards,jd_fetcher,orchestrator}.py" = ["C901"]
"job_hunter/sources/career_pages/{__init__,_jsonld}.py" = ["C901"]
"job_hunter/sources/search_providers/{ats_discovery,router}.py" = ["C901"]
"job_hunter/ux/dashboard.py" = ["C901"]
"job_hunter/ux/health.py" = ["C901"]
"job_hunter/workspace/_assets.py" = ["C901"]
"job_hunter/sources/ats/*.py" = ["S314"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.analysis]
replace-imports-with-any = [
  "jobspy.**",
  "playwright.**",
  "google.**",
  "keyring.**",
  "headroom.**",
]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
missing-argument = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"
too-many-positional-arguments = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unsupported-operator = "ignore"

[tool.ty.src]
include = ["job_hunter", "tests"]
exclude = ["notebooks", "**/generated/**"]
