[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter-kit"
version = "0.14"
description = "Job search automation with LLM API pipeline mode and AI agent mode."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Abdul Basit"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
]
requires-python = ">=3.12,<3.14"
dependencies = [
  "typer>=0.12",
  "anthropic>=0.50.0",
  "openai>=1.68.0",
  "google-genai>=1.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "pyyaml>=6.0",
  "python-jobspy>=0.20.0",
  "jsonschema>=4.0",
  "headroom-ai>=0.1.0; sys_platform != 'win32'",
  "pywebview>=4.4",
  "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-cov", "ty>=0.0.1a20"]
secrets = ["keyring>=24.0.0"]
all = ["job-hunter-kit[browser,secrets]"]

[project.scripts]
job-hunter = "job_hunter.cli:app"

[project.urls]
Homepage = "https://github.com/abdulrbasit/job-hunter"
Repository = "https://github.com/abdulrbasit/job-hunter"
Issues = "https://github.com/abdulrbasit/job-hunter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["job_hunter", "job_hunter.*"]

[tool.setuptools.package-data]
"job_hunter.templates" = [
  "workspace/SETUP.md",
  "workspace/AGENTS.md",
  "workspace/CLAUDE.md",
  "workspace/README.md",
  "workspace/.env.example",
  "workspace/.gitignore",
  "workspace/config/**/*",
  "workspace/outputs/**/*",
  "workspace/.github/**/*",
  "workspace/profile/**/*",
  "workspace/.claude/skills/caveman/**/*",
  "workspace/.claude/skills/job-hunter/**/*",
  "workspace/.claude/skills/linkedin/**/*",
  "workspace/.claude/skills/setup/**/*",
]
"job_hunter.linkedin" = ["defaults.yml"]
"job_hunter.ux.webdash" = ["*.html"]

[tool.uv]
override-dependencies = [
  "markdownify>=0.14.1",
  "python-jobspy>=1.1.82",
  "pandas>=2.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["job_hunter"]
omit = [
  "job_hunter/cli/*",
  "job_hunter/sources/career_pages/_rendering.py",
]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["notebooks", "**/generated/**"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "TID251", "W", "S", "C901"]
ignore = ["E501", "S101"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Import-boundary guards (ARCHITECTURE.md §1). Both bans are already true of the codebase today —
# this locks them so a future change can't silently introduce the dependency. Exemptions below are
# every current legitimate (or currently-existing) caller, not a blanket carve-out.
"job_hunter.cli" = { msg = "cli/ is the composition root — nothing else may depend on it. If you need a CLI helper elsewhere, move it out of cli/ first." }
"job_hunter.pipeline" = { msg = "sources/ must not depend on pipeline/ (sources is a lower layer). Elsewhere, prefer tracking/ or db/ over reaching into pipeline/ directly — see ARCHITECTURE.md §1." }

[tool.ruff.lint.per-file-ignores]
# S105/S603/S607: test fixtures use literal fake secrets and shell out to git/python by design.
# TID251: tests legitimately import job_hunter.cli (CliRunner) and job_hunter.pipeline directly.
"tests/**" = ["S105", "S603", "S607", "TID251"]
# TID251: cli/ is the composition root; its own submodules import job_hunter.cli (app, internal_app).
"job_hunter/cli/**" = ["TID251"]
# TID251: pipeline/ submodules import job_hunter.pipeline internally.
"job_hunter/pipeline/**" = ["TID251"]
# TID251: agent_context/ is agent-mode's context builder — a legitimate current caller of pipeline
# stages (enrichment, screening, tailorer), not a boundary violation.
"job_hunter/agent_context/**" = ["TID251"]
# TID251: tracker.py classifies JD status via pipeline.enrichment — pre-existing, not newly allowed.
"job_hunter/tracker.py" = ["TID251"]
# TID251: pre-existing exception, not newly allowed — ux/applications.py calls
# pipeline.readme_writer.update_readme_from_applications to render README updates. This is exactly
# the "UX should read via tracking/query services, not mutate pipeline internals" boundary this rule
# exists to prevent; it's grandfathered here rather than silently broken. Real fix is moving
# update_readme_from_applications's caller relationship, tracked in ARCHITECTURE.md, not done here.
"job_hunter/ux/applications.py" = ["TID251"]
# S603/S607: cli/commands/internal.py intentionally shells out to git for commit/push/status.
# Phase 4 (2026-07-01): B008 dropped from this list — verified it doesn't fire on typer.Option(...)
# defaults anywhere in cli/, so the old blanket ignore here was never load-bearing.
"job_hunter/cli/commands/internal.py" = ["S603", "S607"]
# C901 ignores below: verified against `ruff check --select C901` with the ignore removed (Phase 3,
# 2026-07-01) — every remaining entry still fires without it. Re-verify before trusting this list stale;
# it drifts as functions are refactored. Phase 0 backlog tracks decomposing these, not silencing them.
"job_hunter/agent_context/{batch,candidates,lifecycle}.py" = ["C901"]
"job_hunter/core/llm_utils.py" = ["C901"]
# Phase 5 (2026-07-01): orchestrator.py's content redistributed into runner.py/modes/stages —
# updated glob to match the C901-complex functions' new homes (process_jobs, validate).
"job_hunter/pipeline/enrichment.py" = ["C901"]
"job_hunter/pipeline/stages/{processing,validation}.py" = ["C901"]
# Narrowed from a blanket "*_source.py" glob (Phase 3): 8 of 18 board adapters had zero C901
# violations and gained nothing from the ignore. Only list a source here once ruff proves it complex.
"job_hunter/sources/{adzuna,careerjet,hh,jobbank,jobicy,jobspy,jobstreet,jooble,mycareersfuture,reed}_source.py" = [
  "C901",
]
"job_hunter/sources/{job_boards,jd_fetcher,orchestrator}.py" = ["C901"]
"job_hunter/sources/career_pages/{__init__,_jsonld}.py" = ["C901"]
"job_hunter/sources/search_providers/{ats_discovery,router}.py" = ["C901"]
"job_hunter/ux/dashboard.py" = ["C901"]
"job_hunter/ux/health.py" = ["C901"]
"job_hunter/workspace/_assets.py" = ["C901"]
# S314: ATS adapters parse third-party XML/HTML feeds; defusedxml migration tracked separately, not
# a Phase 3 concern (would be a real code change, not a tooling-config tightening).
"job_hunter/sources/ats/*.py" = ["S314"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.analysis]
replace-imports-with-any = [
  "jobspy.**",
  "playwright.**",
  "google.**",
  "keyring.**",
  "headroom.**",
]

[tool.ty.rules]
# Project-wide default: relaxed. Phase 3 (2026-07-01) verified all 11 rules below already pass clean
# for job_hunter/models.py + job_hunter/config/** with zero code changes — see the override below,
# which promotes them to "error" for just those two locations. Widening the override to pipeline/
# or sources/ is a real code-fixing pass, not a config change — tracked in ARCHITECTURE.md's backlog,
# not done here.
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
missing-argument = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"
too-many-positional-arguments = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"
unsupported-operator = "ignore"

[tool.ty.src]
include = ["job_hunter", "tests"]
exclude = ["notebooks", "**/generated/**"]

# Domain/config modules already type-check clean under full strictness (verified Phase 3). Enforce it
# here so a future change can't silently regress back to the relaxed project-wide defaults above.
[[tool.ty.overrides]]
include = ["job_hunter/models.py", "job_hunter/config/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "error"
invalid-assignment = "error"
invalid-return-type = "error"
missing-argument = "error"
no-matching-overload = "error"
not-subscriptable = "error"
too-many-positional-arguments = "error"
unknown-argument = "error"
unresolved-attribute = "error"
unresolved-import = "error"
unsupported-operator = "error"
